Sua mensagem descritiva aqui

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
         </div>
 
         <!-- Título/Nome -->
-        <h1 class="title text-3xl md:text-4xl font-bold mb-8">Adelson Elias</h1>
+        <h1 class="title text-3xl md:text-4xl font-bold mb-2">Adelson Elias</h1>
         
+        <!-- Texto de boas-vindas profissional -->
+        <p class="mb-8 text-sm md:text-base opacity-90 leading-relaxed max-w-sm mx-auto">
+            Bem-vindo ao meu espaço profissional. Aqui você encontra todos os meus projetos e redes sociais.
+        </p>
+
         <!-- Contêiner de links -->
         <div id="links-container" class="space-y-4">
             <!-- Os links serão adicionados dinamicamente por JS -->
@@ -74,6 +79,8 @@
     <script>
         // Array de objetos com seus links
         const socialLinks = [
+            { name: "WhatsApp", url: "https://wa.me/5581998721990", icon: "fab fa-whatsapp", color: "from-green-500 to-green-700" },
+            { name: "Declara Fácil", url: "https://adehas25.github.io/declarafacil/", icon: "fas fa-file-alt", color: "from-cyan-500 to-blue-700" },
             { name: "Instagram", url: "https://www.instagram.com/adelsonelias", icon: "fab fa-instagram", color: "from-pink-500 to-purple-600" },
             { name: "Twitter (X)", url: "https://twitter.com/adelsoneliash", icon: "fab fa-x-twitter", color: "from-slate-600 to-slate-800" },
             { name: "GitHub", url: "https://github.com/adehas25", icon: "fab fa-github", color: "from-gray-700 to-gray-900" },
