--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -64,7 +64,7 @@
         </p>
 
         <div id="links-container" class="space-y-4">
-            </div>
+        </div>
     </main>
 
     <footer class="text-center text-sm py-4">
@@ -72,13 +72,15 @@
     </footer>
 
     <script>
-        // Array de objetos com seus links
+        // Array de objetos com seus links na nova ordem
         const socialLinks = [
             { name: "WhatsApp", url: "https://wa.me/5581998721990", icon: "fab fa-whatsapp", color: "from-green-500 to-green-700" },
+            { name: "Notion", url: "https://hickory-chickadee-639.notion.site/Direito-1509137ee9938080a35edb8b3de41518?source=copy_link", htmlIcon: '<img src="https://live.staticflickr.com/65535/54761886877_1d7788504b_t.jpg" alt="Logo Notion" class="w-6 h-6 mr-3 rounded-sm">', color: "from-gray-800 to-black" },
+            { name: "Bibliologia", url: "https://1drv.ms/f/c/d7f729cbda9c8f34/EstF-Kq8VS5CppT5X0iuVIABPywtRgentcgVFo8E-o_9ag?e=GfhiM1", icon: "fas fa-book", color: "from-amber-700 to-amber-900" },
+            { name: "E-books", url: "https://1drv.ms/f/c/d7f729cbda9c8f34/Ej3omYejh6FMpQleQ73NWVIBxCZoqd8dDLq81Vhc1-h9uA?e=fioCDP", icon: "fas fa-book-open", color: "from-indigo-500 to-indigo-700" },
             { name: "Instagram", url: "https://www.instagram.com/adelsonelias", icon: "fab fa-instagram", color: "from-pink-500 to-purple-600" },
             // LOGO DO DECLARA FÁCIL ATUALIZADA
             { name: "Declara Fácil", url: "https://adehas25.github.io/declarafacil/", htmlIcon: '<img src="https://live.staticflickr.com/65535/54761899522_0d25284838_t.jpg" alt="Logo Declara Fácil" class="w-6 h-6 mr-3 rounded-sm">', color: "from-cyan-500 to-blue-700" },
-            { name: "Notion", url: "https://hickory-chickadee-639.notion.site/Direito-1509137ee9938080a35edb8b3de41518?source=copy_link", htmlIcon: '<img src="https://live.staticflickr.com/65535/54761886877_1d7788504b_t.jpg" alt="Logo Notion" class="w-6 h-6 mr-3 rounded-sm">', color: "from-gray-800 to-black" },
             { name: "GitHub", url: "https://github.com/adehas25", icon: "fab fa-github", color: "from-gray-700 to-gray-900" },
             { name: "LinkedIn", url: "https://www.linkedin.com/in/adelson-elias-5a97ab36a/", icon: "fab fa-linkedin", color: "from-blue-600 to-blue-800" },
             { name: "YouTube", url: "https://www.youtube.com/@adelsoneliasoficial", icon: "fab fa-youtube", color: "from-red-600 to-red-800" }
@@ -111,4 +113,3 @@
     </script>
 </body>
 </html>
-
